# flow

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ruff.toml  tach.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 2026_03_18_1753-1a201646469f_create_user_table.py  2026_03_20_1500-f8dbf40e2ef1_create_project_tables.py  2026_03_21_2239-85814c1e6c19_add_user_lifecycle_fields.py  2026_03_21_2355-6d8e4c2a9f10_drop_project_member_timestamps.py  2026_03_22_1200-b3d0f8f6a2c1_add_is_superuser_to_users.py  2026_03_22_1600-3c4d5e6f7a8b_add_roles_and_owner_memberships.py  2026_03_23_2105-51dbcf5919b2_add_created_at_to_project_members.py  2026_03_30_1200-72f3b2d8c4a1_create_documents_table.py
app/: main.py
app/api/v1/: __init__.py  exc_handler.py  get_current_user.py
app/core/: config.py
app/infrastructure/: __init__.py  s3_file_storage.py
app/providers/: __init__.py  config.py  db.py  repositories.py  services.py  storage.py
app/schemas/: __init__.py  auth.py  document.py  project.py  type_ids.py  user.py
app/services/: __init__.py  admin_user_service.py  auth_service.py  base_repository.py  document_service.py  exceptions.py  jwt_service.py  project_repository.py  project_service.py  security.py  user_lifecycle_service.py  user_repository.py  user_service.py
infrastructure/: deploy.sh  template.yaml
tests/fixtures/: jwt.py
tests/integration/: conftest.py  test_auth.py  test_users.py
(+68 files in other folders)
