[project]
name = "flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "argon2-cffi==25.1.0",
    "dishka==1.9.1",
    "fastapi==0.135.1",
    "pydantic[email]==2.12.5",
    "sqlalchemy==2.0.48",
    "uvicorn==0.41.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.5",
    "ty==0.0.21",
]

[tool.ty.src]
include = [
    "app",
    "tests",
]
